# animals

./: .animals_config.json  .gitignore  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  Taskfile.yml  train_cycle.ps1
animals_engine/: Cargo.toml
animals_engine/src/: direction.rs  game.rs  lib.rs  map.rs  snake.rs  species.rs
animals_game/: Cargo.toml
animals_game/assets/shaders/: gradient.wgsl
animals_game/src/: ai.rs  camera.rs  components.rs  constants.rs  logic.rs  main.rs  menu.rs  render.rs  resources.rs  setup.rs  ui.rs  utils.rs
animals_simulation/: Cargo.toml  pyproject.toml
animals_simulation/src/: lib.rs
docs/: architecture.md  how_to_add_new_species.md  learning.md
docs/species/: amphibia.md  corpsefag.md  prey.md
learner/: main.py  pyproject.toml  results.json  results_3.json  results_adjacent_eat.json  results_final.json  results_hunger_600.json  results_hungry_snakes.json  results_hungry_snakes_static_prey.json  results_multiple_preys.json  results_retrained_prey.json  results_retrained_prey_3s_2p.json  results_smart_prey_snakes.json  results_static_prey.json  results_swimming.json  results_trained_prey.json  results_tuned.json  test_actions.py  test_results.json  test_sim.py  train_all_stages.ps1  train_all_stages.sh
learner/models/: weights.json
learner/src/learner/: amphibia_environment.py  connection.py  constants.py  corpsefag_environment.py  environment.py  environment_test.py  export_weights.py  main.py  model_utils.py  play.py  policy.py  prey_environment.py  test.py  train_amphibia.py  train_corpsefag.py  train_prey.py
