[project]
name = "learner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.3.0",
    "maturin>=1.14.1",
    "numpy>=2.5.1",
    "rich>=15.0.0",
    "stable-baselines3>=2.9.0",
    "torch>=2.13.0",
    "tqdm>=4.68.4",
]
